--- a/app/index.css
+++ b/app/index.css
@@ -68,8 +68,12 @@ figure {
 
     text-align: center;
     margin-top: 60px;
-}
 
+}
+.types{
+
+    margin-top: 30px;
+}
 .title {
     text-align: center;
     margin-top: 50px;
@@ -94,7 +98,37 @@ article {
 
 }
 
-/*p {*/
-/*font-weight: 400;*/
-/*margin-top: 50px;*/
-/*}*/
+.liv {
+
+    width: 300px;
+    height: 300px;
+    padding: 0px;
+    margin-top: 150px;
+    margin-left: 150px;
+
+}
+
+
+.panel-warning {
+
+    height: 600px;
+    width: 600px;
+    background-color: silver;
+
+}
+
+.gold {
+    background-color: goldenrod;
+}
+.silver {
+    background-color:silver;
+}
+
+
+.panel.panel-warning {
+    margin-left: 150px;
+    margin-bottom: 50px;
+    margin-top: 100px;
+
+
+}
